@@ -14,10 +14,10 @@ getdate.c
 lookup3
 rpmdigest
 rpmgrep
+rpmtar
 teststderr
 testtry
 tdigest
-tdeb
 tdir
 tfts
 tget
@@ -33,4 +33,3 @@ tput
 tring
 trpmio
 tsw
-ttar
